provider/kubernetes/fixtures/tLSSecretLoad_ingresses.yml
apiVersion: v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/frontend-entry-points: ep1,ep2
  namespace: testing
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: example-com
          servicePort: 80
  - host: example.org
    http:
      paths:
      - backend:
          serviceName: example-org
          servicePort: 80
  tls:
  - secretName: myTlsSecret

---
apiVersion: v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/frontend-entry-points: ep3
  namespace: testing
spec:
  rules:
  - host: example.fail
    http:
      paths:
      - backend:
          serviceName: example-fail
          servicePort: 80
  tls:
  - secretName: myUndefinedSecret

---
apiVersion: v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/frontend-entry-points: ep3
  name: badSecretIng
  namespace: testing
spec:
  rules:
    - host: example.fail
      http:
        paths:
          - backend:
              serviceName: example-fail
              servicePort: 80
  tls:
    - secretName: badSecret
